--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongodb": "4.12",
+    "mongoose": "^6.9.1",
     "pug": "^3.0.2"
   }
 }
